# fan_configurator

./: Cargo.toml
src/: deps.rs  fan.rs  heatsrc.rs  main.rs
