[package]
name = "fan-configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10"
glob = "0.3"
nix = "0.26"
serde = {version="1.0" , features=["serde_derive"]}
serde_json = "1.0"
